# jc

./: CMakeLists.txt  README.org
examples/: arena.jc  curl.jc  curl.px  file.jc  file.px  generics.px  gps.px  http.px  interfaces.px  jc.px  namegen.px  partial-specialization.px  stat.jc  test.px  vector.px
include/backend/: analyzer.hpp  codegen.hpp  scope.hpp  symbol.hpp  type.hpp  type_registry.hpp
include/frontend/: analyzer.hpp  ast.hpp  diagnostic.hpp  lexer.hpp  parser.hpp  path.hpp  scope.hpp  source.hpp  symbol.hpp  template_registry.hpp  token.hpp  type.hpp  type_registry.hpp
src/backend/: analyzer.cpp  codegen.cpp  scope.cpp  template_registry.cpp  type.cpp  type_registry.cpp
src/frontend/: analyzer.cpp  ast.cpp  compiler.cpp  diagnostic.cpp  lexer.cpp  parser.cpp  path.cpp  scope.cpp  source.cpp  token.cpp  type_registry.cpp
